--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "lint" : "eslint src/**/*.js",
+    "lint-fix" : "eslint --fix src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "sass": "^1.51.0"
   }
 }
