--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     ],
     "rules": {
         "indent" : ["error", 2],
-        "linebreak-style": ["error", "windows"],
+        "linebreak-style": "off",
         "quotes": ["error", "double"],
         "semi": ["error", "always"],
         "no-console": "off",
